k8s/overlays/production/production-patches/congen-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: congen
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: congen
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
