k8s/overlays/production/production-patches/congen-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: congen
spec:
  selector:
    app: congen
  type: LoadBalancer
